# python-linting-sandbox

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
