[project]
name = "python-linting-sandbox"
version = "0.1.0"
description = "lint anything for a Python project"
authors = [
    {name = "atloo1",email = "15357562+atloo1@users.noreply.github.com"}
]
license = "MIT"
readme = "README.md"
requires-python = "^3.9"

[tool.poetry.group.dev.dependencies]
mypy = "^1"
pre-commit = "^4"
ruff = "^0.9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
lint.extend-select = ["I"]  # sort imports

[tool.ruff.format]
quote-style = "single"
