[project]
name = "python-linting-sandbox"
version = "0.1.1"
description = "lint anything for a Python project"
authors = [
    {name = "atloo1"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9,<4"

[tool.poetry.group.dev.dependencies]
mypy = ">=1,<2"
pre-commit = ">=4,<5"
ruff = ">=0.9,<1"

[build-system]
requires = ["poetry-core>=2,<3"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
lint.extend-select = ["I"]  # sort imports

[tool.ruff.format]
quote-style = "single"
